--- a/kNN_ML.ipynb
+++ b/kNN_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "179243ae-3d6b-4947-bc5e-533909033f61",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "928e5d80-c2bf-49db-b400-747db9abfcd2",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "2497a37f-aa2d-47c8-8b65-7e236b6645de",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "53ea4e47-f155-42a5-a667-97f333bc599d",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "9130e145-dd9c-4ef5-9053-c324c799b520",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "afabf3af-ce31-4ade-85cf-59955b847483",
    "metadata": {},
    "outputs": [
@@ -128,8 +128,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e020d3c3-64c6-42e4-baab-2e8cf33f27bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recall score:  0.875\n",
+      "accuracy score:  0.9016393442622951\n",
+      "precision score:  0.9333333333333333\n",
+      "   param_n_neighbors  mean_test_score\n",
+      "0                  3         0.805782\n",
+      "1                  5         0.814116\n",
+      "2                  7         0.801616\n",
+      "3                  9         0.801786\n",
+      "{'n_neighbors': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cross Validation for hyperparameters tuning using GridsearchCV\n",
+    "\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "classifier = KNeighborsClassifier()\n",
+    "param_grid = {\"n_neighbors\":[3,5,7,9]}\n",
+    "\n",
+    "classifierCV = GridSearchCV(\n",
+    "    classifier,\n",
+    "    param_grid,\n",
+    "    cv=5,\n",
+    "    # scoring=\"recall\" default uses accuracy score\n",
+    ")\n",
+    "\n",
+    "classifierCV.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "y_pred = classifierCV.predict(X_test_scaled)\n",
+    "\n",
+    "print(\"recall score: \", recall_score(y_test, y_pred))\n",
+    "print(\"accuracy score: \", accuracy_score(y_test, y_pred))\n",
+    "print(\"precision score: \", precision_score(y_test, y_pred))\n",
+    "\n",
+    "#results \n",
+    "res = pd.DataFrame(classifierCV.cv_results_)\n",
+    "print(res[[\"param_n_neighbors\",\"mean_test_score\"]])\n",
+    "\n",
+    "print(classifierCV.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7ea3725c-47d0-4537-bc23-c84f944e8aa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recall score:  0.90625\n",
+      "accuracy score:  0.9180327868852459\n",
+      "precision score:  0.9354838709677419\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Pipeline used to prevent data lickage for testing data\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size = 0.2, random_state = 42 \n",
+    ")\n",
+    "\n",
+    "pipeline = Pipeline([\n",
+    "    ('scaler',StandardScaler()),\n",
+    "    ('knn',KNeighborsClassifier())\n",
+    "])\n",
+    "\n",
+    "param_grid = {\"knn__n_neighbors\":[3,5,7,9]}\n",
+    "\n",
+    "classifierCV = GridSearchCV(\n",
+    "    pipeline,\n",
+    "    param_grid,\n",
+    "    cv=5,\n",
+    "    scoring=\"recall\" #default uses accuracy score\n",
+    ")\n",
+    "\n",
+    "classifierCV.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = classifierCV.predict(X_test)\n",
+    "\n",
+    "print(\"recall score: \", recall_score(y_test, y_pred))\n",
+    "print(\"accuracy score: \", accuracy_score(y_test, y_pred))\n",
+    "print(\"precision score: \", precision_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d395472-171d-4b8e-b6d1-942736e046ad",
    "metadata": {},
    "outputs": [],
    "source": []
